<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="homeViewModel"
            type="org.d3ifcool.hystorms.viewmodel.HomeViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.main.home.HomeFragment">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginTop="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/weather_shimmer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    app:bindShimmer="@{homeViewModel.weatherViewState}"
                    app:shimmer_duration="800">

                    <include layout="@layout/layout_weather_placeholder" />
                </com.facebook.shimmer.ShimmerFrameLayout>

                <include
                    android:id="@+id/weather_layout"
                    layout="@layout/layout_weather" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/weather_error"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    app:bindVisibilityErrorWeather="@{homeViewModel.weatherViewState}">

                    <TextView
                        android:id="@+id/tv_weather_error"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_load_fail"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btn_weather_retry"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_margin"
                        android:text="@string/text_retry"
                        android:textColor="@color/green_button"
                        app:icon="@drawable/ic_refresh_white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_weather_error" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/tanks_shimmer"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="@dimen/normal_margin"
                android:visibility="gone"
                app:bindShimmer="@{homeViewModel.tankViewState}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <include layout="@layout/layout_home_tank_placeholder" />

                    <include layout="@layout/layout_home_tank_placeholder" />

                    <include layout="@layout/layout_home_tank_placeholder" />
                </LinearLayout>
            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_tank"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="@dimen/normal_margin"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                tools:itemCount="1"
                tools:listitem="@layout/layout_home_tank_item" />

            <TextView
                android:id="@+id/tv_tank_empty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginTop="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                android:layout_marginBottom="@dimen/normal_margin"
                android:text="@string/text_no_data"
                android:textAlignment="center"
                android:visibility="@{homeViewModel.isTankEmpty() ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="@+id/rv_tank"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                tools:visibility="gone" />

            <TextView
                android:id="@+id/tv_tank_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginEnd="@dimen/small_margin"
                android:layout_marginBottom="@dimen/small_margin"
                android:text="@string/text_load_fail"
                android:visibility="gone"
                app:bindVisibilityErrorWeather="@{homeViewModel.tankViewState}"
                app:layout_constraintBottom_toBottomOf="@+id/rv_tank"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/rv_tank" />

            <Button
                android:id="@+id/btn_tank_retry"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/text_retry"
                android:textColor="@color/green_button"
                android:visibility="gone"
                app:bindVisibilityErrorWeather="@{homeViewModel.tankViewState}"
                app:icon="@drawable/ic_refresh_white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_tank_error" />

            <TextView
                android:id="@+id/tv_schedule_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginTop="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                android:text="@string/text_schedule"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_tank" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                app:layout_constraintBottom_toBottomOf="@+id/spinner"
                app:layout_constraintEnd_toStartOf="@+id/spinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/spinner"
                tools:text="Senin, 15 November 2020" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                android:spinnerMode="dropdown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_schedule_title"
                tools:listitem="@android:layout/simple_spinner_dropdown_item" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/schedule_shimmer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:visibility="gone"
                app:bindShimmer="@{homeViewModel.scheduleViewState}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <include layout="@layout/layout_schedule_item_placeholder" />

                    <include layout="@layout/layout_schedule_item_placeholder" />

                    <include layout="@layout/layout_schedule_item_placeholder" />
                </LinearLayout>
            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_schedule"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/small_margin"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner"
                tools:listitem="@layout/layout_schedule_item" />

            <TextView
                android:id="@+id/tv_schedule_empty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginTop="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                android:layout_marginBottom="@dimen/normal_margin"
                android:text="@string/text_no_data"
                android:textAlignment="center"
                android:visibility="@{homeViewModel.isScheduleEmpty() ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner"
                tools:visibility="gone" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>