<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="tank"
            type="org.d3ifcool.hystorms.model.Tank" />

        <variable
            name="plant"
            type="org.d3ifcool.hystorms.model.Plant" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:contentDescription="@string/text_tank_image_desc"
            android:id="@+id/img_tank"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="@dimen/normal_margin"
            android:scaleType="centerCrop"
            android:layout_marginTop="@dimen/normal_margin"
            app:bindImageUrl="@{tank.photoUrl}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_account" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:maxLines="2"
            android:text="@{tank.name}"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_tank"
            app:layout_constraintTop_toTopOf="@+id/img_tank"
            tools:text="Tanki Bayam 23" />

        <TextView
            android:id="@+id/tv_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:layout_marginBottom="@dimen/small_margin"
            android:maxLines="1"
            android:textSize="16sp"
            app:bindAmountText="@{tank.amount}"
            app:layout_constraintBottom_toTopOf="@+id/tv_age"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_tank"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            tools:text="Jumlah : 10 Tanaman" />

        <TextView
            android:id="@+id/tv_age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:maxLines="1"
            android:textSize="16sp"
            app:bindAgeText="@{tank.plantedAt}"
            app:layout_constraintBottom_toBottomOf="@+id/img_tank"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/img_tank"
            tools:text="Umur : 45 Hari" />

        <ImageView
            android:contentDescription="@string/text_plant_image"
            android:id="@+id/img_plant"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="@dimen/normal_margin"
            android:scaleType="centerCrop"
            android:layout_marginTop="@dimen/normal_margin"
            app:bindImageUrl="@{plant.photoUrl}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_tank" />

        <TextView
            android:id="@+id/tv_plant_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:maxLines="2"
            android:text="@{plant.name}"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_plant"
            app:layout_constraintTop_toTopOf="@+id/img_plant"
            tools:text="Tanki Bayam 23" />

        <TextView
            android:id="@+id/tv_scientific_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:maxLines="1"
            android:text="@{plant.scientificName}"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_plant"
            app:layout_constraintTop_toBottomOf="@+id/tv_plant_name"
            tools:text="Jumlah : 10 Tanaman" />

        <Button
            android:id="@+id/btn_edit_tank"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:layout_marginBottom="@dimen/normal_margin"
            android:background="@android:color/transparent"
            android:text="@string/text_tank"
            app:icon="@drawable/ic_edit_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_scientific_name"
            app:tint="@color/black" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>