<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.tank.AddScheduleFragment">

    <data>

        <variable
            name="scheduleViewModel"
            type="org.d3ifcool.hystorms.viewmodel.AddScheduleViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main"
        android:fitsSystemWindows="false">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fitsSystemWindows="true"
            app:elevation="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:title="@{!scheduleViewModel.isEdit() ? @string/add_schedule_title : @string/edit_schedule_title}"
                    app:titleTextColor="@color/green_on_primary"
                    tools:title="Tambah Jadwal" />

                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_marginEnd="@dimen/normal_margin"
                    android:layout_marginBottom="@dimen/small_margin"
                    app:bindProgress="@{scheduleViewModel.viewState}"
                    app:layout_constraintBottom_toBottomOf="@+id/toolbar"
                    app:layout_constraintEnd_toEndOf="@+id/toolbar"
                    app:layout_constraintTop_toTopOf="@+id/toolbar" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tf_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_margin"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:layout_marginEnd="@dimen/normal_margin"
                    android:hint="@string/text_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text='@{scheduleViewModel.scheduleEdit.title ?? ""}'
                        app:bindLoadingEditTextState="@{scheduleViewModel.viewState}" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_day_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_margin"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:layout_marginEnd="@dimen/normal_margin"
                    android:text="@string/text_choose_days"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tf_name" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_day_picker"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:layout_marginTop="@dimen/small_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_day_picker"
                    tools:listitem="@layout/layout_day_picker_item" />

                <TimePicker
                    android:id="@+id/timePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_margin"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:layout_marginEnd="@dimen/normal_margin"
                    android:layout_marginBottom="@dimen/normal_margin"
                    android:timePickerMode="spinner"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rv_day_picker" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="@dimen/normal_margin"
            android:layout_marginBottom="@dimen/normal_margin"
            android:src="@drawable/leku_ic_check_light"
            app:layout_behavior="com.google.android.material.floatingactionbutton.FloatingActionButton$Behavior"
            android:contentDescription="@string/text_button_done" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>